refined code
