# readify/src/main/java/mk/com/readify/model/response/AuthenticationResponse.java
@@ -9,4 +9,5 @@ import lombok.Setter;
 @Setter
 public class AuthenticationResponse {
     private String token;
+    private String fullName;
 }
